Bug 310662 - Dolphin scroll lagging when hidden folders symlinks are visible
Summary: Dolphin scroll lagging when hidden folders symlinks are visible
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: icons mode (other bugs)
Version First Reported In: 2.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL: http://www.youtube.com/watch?v=N4v4CZ...
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-25 17:38 UTC by Frank Souza
Modified: 2013-08-14 21:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Souza 2012-11-25 17:38:29 UTC
Dolphin scroll lagging when hidden folders symlinks are in a visible area. The attached video explains everything. The bug does not appear to be related to the theme icon. I also tested with Okygen and several other.

https://dl.dropbox.com/u/17190485/dolphin-scroll-lagging.webm

Reproducible: Always

Actual Results:  
Scroll lagging

Expected Results:  
No lag when scroll
Comment 1 Frank Souza 2012-11-25 18:31:56 UTC
Youtube video link >> http://www.youtube.com/watch?v=N4v4CZEWGNA&feature=youtu.be
Comment 2 Frank Reininghaus 2012-11-27 06:12:46 UTC
Thanks for the bug report! I can confirm the problem.
Comment 3 Frank Reininghaus 2013-08-14 21:49:10 UTC
Git commit 381b17964d49259955eb5c5e537d290b26c162ef by Frank Reininghaus.
Committed on 14/08/2013 at 21:44.
Pushed by freininghaus into branch 'KDE/4.11'.

Fix slow scrolling when hidden files or symbolic links are shown

The problem was that we drawed the overlays using KIconLoader, which can
be very slow, every time an item appeared on the screen. This commit
makes sure that not only the icon, but the icon including overlays is
cached in QPixmapCache. Therefore, the overlay drawing is done just once
for each icon+overlays combination.

For previews, the overlay drawing is done in KFileItemModelRolesUpdater
just after the preview is received.
Related: bug 314339
FIXED-IN: 4.11.1
REVIEW: 111956

M  +16   -0    dolphin/src/kitemviews/kfileitemmodelrolesupdater.cpp
M  +18   -19   dolphin/src/kitemviews/kstandarditemlistwidget.cpp
M  +1    -1    dolphin/src/kitemviews/kstandarditemlistwidget.h

http://commits.kde.org/kde-baseapps/381b17964d49259955eb5c5e537d290b26c162ef